# L2Shablya

./: .env  .gitignore  CLAUDE.md  Cargo.toml  LiCENSE.MD  README.MD  bo-32087-7037950343145055498_0.profraw  bo-32088-7037950343145055498_0.profraw  bo-32103-11347305807021141645_0.profraw  bo-32103-11573367337353423530_0.profraw  bo-32103-13643752766061569825_0.profraw  bo-32103-13741546635698250921_0.profraw  bo-32103-1376109465140196267_0.profraw  bo-32103-14389733895134913043_0.profraw  bo-32103-14833310291351741878_0.profraw  bo-32103-14981411893065750535_0.profraw  bo-32103-14996359861871366986_0.profraw  bo-32103-16700630286790005848_0.profraw  bo-32103-17518079715936592511_0.profraw  bo-32103-18053354857671257620_0.profraw  bo-32103-3337014640066757120_0.profraw  bo-32103-3371807013462204109_0.profraw  bo-32103-339264497884275368_0.profraw  bo-32103-4223719628383313569_0.profraw  bo-32103-4788699019239963726_0.profraw  bo-32103-6726813912454186976_0.profraw  bo-32103-6799227432283744921_0.profraw  bo-32103-8167245178167152104_0.profraw  bo-32103-821342234318753176_0.profraw  bo-32103-8847380769486760057_0.profraw  bo-32104-11347305807021141645_0.profraw  bo-32104-11573367337353423530_0.profraw  bo-32104-13643752766061569825_0.profraw  bo-32104-13741546635698250921_0.profraw  bo-32104-1376109465140196267_0.profraw  bo-32104-14389733895134913043_0.profraw  bo-32104-14833310291351741878_0.profraw  bo-32104-14981411893065750535_0.profraw  bo-32104-14996359861871366986_0.profraw  bo-32104-16700630286790005848_0.profraw  (+367 more)
entities/: Cargo.toml  bo-32133-7145539819611690064_0.profraw  build.rs
entities/src/: lib.rs  test_factories.rs
entities/src/dao/: castle.rs  char_info.rs  char_skill.rs  character.rs  clan_ally.rs  item.rs  mod.rs  user.rs
entities/src/dao/char_info/: mod.rs  race.rs  variables.rs
entities/src/entities/: castle.rs  character.rs  character_mail.rs  clan_ally.rs  crest.rs  item.rs  mod.rs  prelude.rs  quest.rs  skill.rs  user.rs
entities/src/services/: character.rs  user.rs
game/: Cargo.toml  bo-32135-1003554099160402943_0.profraw
game/config/data/stats/: stat_bonus.yaml
game/src/: controller.rs  cp_factory.rs  handlers.rs  ls_client.rs  lsp_factory.rs  main.rs  movement.rs  pl_client.rs  skills.rs  test_utils.rs  tests.rs
game/src/client_thread/: handler.rs
game/src/data/: action_list.rs  base_stat.rs  char_template.rs  exp_table.rs  mod.rs
game/src/data/classes/: mapping.rs  mod.rs
game/src/ls_thread/: handler.rs
game/src/managers/: clan_ally.rs  mod.rs
game/src/packets/: enums.rs  mod.rs  utils.rs
game/src/packets/from_client/: action.rs  attack.rs  auth.rs  char_create.rs  char_restore.rs  char_select.rs  delete_char.rs  enter_world.rs  logout.rs  mod.rs  move_to_location.rs  new_char.rs  new_char_request.rs  noop.rs  protocol.rs  req_skill_cooltime.rs  request_cancel_target.rs  request_magic_skill_use.rs  request_skill_list.rs  restart.rs  stop_move.rs  validate_position.rs
game/src/packets/handleable/: change_password.rs  gs_auth_response.rs  gs_login_fail.rs  init_ls.rs  kick_player.rs  mod.rs  player_auth_request.rs  player_auth_response.rs  player_in_game.rs  player_logout.rs  player_tracert.rs  req_chars.rs
game/src/packets/to_client/: abnormal_status_update.rs  acquire_skill_list.rs  action_failed.rs  attack.rs  char_create_fail.rs  char_create_ok.rs  char_delete_fail.rs  char_etc_status_update.rs  char_info.rs  char_move_to_location.rs  char_selected.rs  char_selection.rs  delete_object.rs  friend_list.rs  henna_info.rs  item_list.rs  login_response.rs  macro_list.rs  magic_skill_launched.rs  magic_skill_use.rs  mod.rs  move_to.rs  new_char_response.rs  protocol_response.rs  quest_list.rs  relation_changed.rs  restart_resp.rs  shortcuts_init.rs  skill_cool_time.rs  skill_cooltime.rs  skill_list.rs  status_update.rs  system_message.rs  target_selected.rs  target_unselected.rs  user_info.rs
l2-core/: Cargo.toml  bo-32136-11866786247354831621_0.profraw  bo-32153-13310209599298910627_0.profraw  bo-32154-13207385252297043261_0.profraw
l2-core/src/: bitmask.rs  constants.rs  dto.rs  enums.rs  errors.rs  id_factory.rs  lib.rs  message_broker.rs  network.rs  session.rs  str.rs  tests.rs  utils.rs
l2-core/src/config/: gs.rs  login.rs  mod.rs  traits.rs
l2-core/src/crypt/: game.rs  login.rs  mod.rs  rsa.rs
l2-core/src/data/: action_list.rs  base_stat.rs  char_template.rs  exp_table.rs  mod.rs  skill_tree_data.rs  skills.rs
l2-core/src/data/classes/: mapping.rs
l2-core/src/game_objects/: cursed_weapon.rs  mod.rs  paper_doll.rs  private_store_types.rs  race.rs  zone.rs
l2-core/src/game_objects/creature/: buff.rs  efects.rs  mod.rs  skill.rs
l2-core/src/game_objects/item/: _item.rs  attribute.rs  mod.rs
l2-core/src/game_objects/player/: _macro.rs  _player.rs  _player_db.rs  _subclass.rs  _teleport_bookmark.rs  appearance.rs  clan.rs  inventory.rs  mod.rs  paper_doll.rs  party.rs  quest.rs  relation.rs  user_info.rs  vars.rs  warehouse.rs
l2-core/src/game_objects/stats/: calculator.rs  creature.rs  formulas.rs  mod.rs  stat_enum.rs  tests.rs  variations.rs
l2-core/src/geoengine/: mod.rs
l2-core/src/geoengine/geodata/: mod.rs
l2-core/src/model/: user_info.rs
l2-core/src/network/: connection.rs  connector.rs  listener.rs  mod.rs
l2-core/src/packets/: common.rs  read.rs  write.rs
l2-core/src/shared_packets/: common.rs  mod.rs  read.rs  write.rs
l2-core/src/traits/: conversion.rs  handlers.rs  mod.rs  server.rs
login/: Cargo.toml  bo-32137-11153102667290556869_0.profraw
login/src/: enums.rs  gs_client.rs  login_client.rs  main.rs  message.rs  test_utils.rs
login/src/client_thread/: handler.rs
login/src/controller/: data.rs  gs_management.rs  gs_messaging.rs  mod.rs  player_management.rs  security.rs
login/src/dto/: game_server.rs  player.rs
login/src/gs_thread/: enums.rs  handler.rs  mod.rs
login/src/packet/: cp_factory.rs  gs_factory.rs  mod.rs
login/src/test_data/: test_config.yaml
login/test_data/: s1.csv
scripts/: Cargo.toml
scripts/src/: help.rs  main.rs  xml_to_yaml.rs
(+814 files in other folders)
