[package]
name = "L2Rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "login"
path = "src/login.rs"

[[bin]]
name = "game"
path = "src/game.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[profile.dev]
debug = true

[dependencies]
encoding = "^0.2.33"
rand = "^0.8.5"
rand_core = "^0.6.4"
anyhow = "^1.0.92"
thiserror = "^1.0.67"
log = "^0.4.22"
serde = { version = "^1.0.214", features = ["derive"] }
num = "^0.4.3"
num-traits = "^0.2.19"
openssl = "^0.10.68"
tokio = { version = "^1.41.0", features = ["full"] }
sqlx = { version = "^0.8.2", features = [
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
    "sqlx-macros",
] }
futures = "^0.3.31"
async-trait = "^0.1.83"
argon2 = "^0.5.3"
serde_yaml = "^0.9.34"
strum = { version = "^0.26.3", features = ["derive"] }
dotenvy = "^0.15.7"
blowfish = "^0.9.1"
num_enum = "^0.7.3"
uuid = { version = "^1.11.0", features = ["v4"] }
dashmap = "6.1.0"
chrono = "0.4.38"
pnet = "0.35.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
