[workspace.package]
edition = "2024"

[workspace]
members = ["entities", "game", "l2-core", "login", "macro-common", "migration", "test-utils"]
resolver = "2"


[profile.dev.package.num-bigint-dig]
opt-level = 3

[workspace.dependencies]
kameo = { git = "https://github.com/artemijan/kameo.git" , branch = "actor-lifecycle", features = ["default"]}
async-trait = "^0.1.83"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
sea-orm = { version = "^1.1.4", features = ["default", "uuid"] }
chrono = "0.4.39"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.94"
argon2 = "^0.5.3"
tokio = { version = "^1.43.0", features = ["full"] }
serde_json = "1.0.134"
encoding = "^0.2.33"
rand_core = "0.6.4"
thiserror = "2.0.6"
log = "^0.4.22"
num = "^0.4.3"
num-traits = "^0.2.19"
sqlx = { version = "^0.8.2", features = [
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
    "sqlx-macros",
    "chrono",
] }
dotenvy = "^0.15.7"
blowfish = "^0.9.1"
num_enum = "^0.7.3"
pnet = "0.35.0"
reqwest = { version = "0.12.9", features = ["blocking"], default-features = false }
futures = "^0.3.31"
rsa = { version = "0.9.7" }
pem = "3.0.4"
uuid = { version = "^1.11.0", features = ["v4"] }
strum = { version = "0.27.0", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
bytes = "1.9.0"
ntest = "0.9.3"
