[workspace.package]
edition = "2024"

[workspace]
members = ["entities", "game", "l2-core", "login", "macro-common", "migration", "scripts", "test-utils"]
resolver = "2"


[profile.dev.package.num-bigint-dig]
opt-level = 3

[workspace.dependencies]
async-trait = "^0.1.88"
kameo = "0.20.0"
strum_macros = "0.28.0"
tracing = "0.1.41"
walkdir = "2.5.0"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
sea-orm = { version = "^1.1.13", features = ["default", "uuid", "sqlx-postgres", "sqlx-sqlite"] }
sea-orm-migration = { version = "1.1.13", features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres", # `DATABASE_DRIVER` feature
    "sqlx-sqlite",
] }
chrono = "0.4.41"
rand = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.98"
argon2 = "^0.5.3"
tokio = { version = "^1.46.1", features = ["full"] }
serde_json = "1.0.140"
encoding = "^0.2.33"
rand_core = "0.10.1"
thiserror = "2.0.12"
log = "^0.4.27"
num = "^0.4.3"
num-traits = "^0.2.19"
sqlx = { version = "0.9.0", features = [
    "postgres",
    "sqlite",
    "sqlx-macros",
    "chrono",
    "any",
] }
dotenvy = "^0.15.7"
blowfish = "0.10.0"
num_enum = "^0.7.4"
pnet = "0.35.0"
reqwest = { version = "0.13.4", features = ["blocking"], default-features = false }
futures = "^0.3.31"
rsa = { version = "0.9.8" }
pem = "3.0.5"
uuid = { version = "^1.17.0", features = ["v4"] }
strum = { version = "0.28.0", features = ["derive"] }
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
bytes = "1.10.1"
serial_test = "3.2.0"
serde_with = "3.12.0"
