[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm.workspace = true
anyhow.workspace = true
argon2.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
