[package]
name = "entities"
version = "0.1.0"
edition = "2021"
publish = false

[features]
test-factories = []  # Define the feature



[dependencies]
test-utils = { path = "../test-utils" }
sea-orm.workspace = true
anyhow.workspace = true
argon2.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true

[build-dependencies]