[package]
name = "game"
version = "0.1.0"
edition = "2021"
publish = false
[[bin]]
name = "game"
path = "src/main.rs"
[dependencies]
entities = { path = "../entities" }
l2-core = { path = "../l2-core" }
anyhow = "^1.0.92"
tokio = { version = "^1.43.0" }
async-trait = "^0.1.83"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
chrono = "0.4.39"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"