[package]
name = "game"
version = "0.1.0"
edition = "2021"
publish = false
[[bin]]
name = "game"
path = "src/main.rs"
[dependencies]
entities = { path = "../entities" }
l2-core = { path = "../l2-core" }
macro-common = { path = "../macro-common" }
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
sea-orm.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = "1.0.134"
ntest.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }
entities = { path = "../entities", features = ["test-utils"] }