[package]
name = "scripts"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
quick-xml = { version = "0.41.0", features = ["serialize"] }
walkdir = { workspace = true }
